Change website information

--- a/repairnator-site/app/index.html
+++ b/repairnator-site/app/index.html
@@ -33,7 +33,7 @@
     <header class="page-header js-header">
       <div class="page-header__inner">
         <div class="page-header__logo">
-          <h1>LibRepair</h1>&nbsp;<span>Towards repair automation</span>
+          <h1>RepairNator</h1>&nbsp;<span>Towards repair automation</span>
         </div>
         <nav class="page-header__nav js-nav">
           <ul>
@@ -47,61 +47,23 @@
     </header>
 
     <section class="promo js-jumbo" id="home">
-      <h2 class="promo__title">We build<span>brand</span></h2>
-      <p class="promo__descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p><a class="promo__btn" href="#">Learn more</a><a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a>
+      <h2 class="promo__title">RepairNator: <span>Scan and Repair</span> automatically</h2>
+      <p class="promo__descr">
+        RepairNator is a tool creating with the purpose to reproduce detected bugs, and to find automatically patches for those bugs.
+      </p>
+      <a class="promo__btn" href="#">Learn more</a>
+      <a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a>
     </section>
     <!-- $Portfolio section-->
     <section id="portfolio">
       <div id="charts"></div>
     </section>
-    <!-- $Team section-->
-    <section class="team" id="team">
-      <div class="team__inner">
-        <h2 class="team__title">About us</h2>
-        <p class="team__descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
-        <div class="team__member"><img src="static/images/ava1.jpg" alt="Melanie Doe">
-          <div class="team__member-info">
-            <h3 class="team__member-name">Melannie Doe</h3><span class="team__member-role">Project manager</span>
-            <p class="team__member-descr">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-          </div>
-          <ul class="team__member-soc">
-            <li><a class="team__member-icon fb" href="#">My Facebook</a></li>
-            <li><a class="team__member-icon tw" href="#">Follow me on twitter</a></li>
-            <li><a class="team__member-icon gplus" href="#">My Google+</a></li>
-            <li><a class="team__member-icon db" href="#">I am on Dribble</a></li>
-          </ul>
-        </div>
-        <div class="team__member"><img src="static/images/ava2.jpg" alt="Jhonie Doe">
-          <div class="team__member-info">
-            <h3 class="team__member-name">Jhonnie Doe</h3><span class="team__member-role">Graphic designer</span>
-            <p class="team__member-descr">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-          </div>
-          <ul class="team__member-soc">
-            <li><a class="team__member-icon fb" href="#">My Facebook</a></li>
-            <li><a class="team__member-icon tw" href="#">Follow me on twitter</a></li>
-            <li><a class="team__member-icon gplus" href="#">My Google+</a></li>
-            <li><a class="team__member-icon db" href="#">I am on Dribble</a></li>
-          </ul>
-        </div>
-        <div class="team__member"><img src="static/images/ava3.jpg" alt="Daniel Doe">
-          <div class="team__member-info">
-            <h3 class="team__member-name">Daniel Doe</h3><span class="team__member-role">Web designer</span>
-            <p class="team__member-descr">Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat.</p>
-          </div>
-          <ul class="team__member-soc">
-            <li><a class="team__member-icon fb" href="#">My Facebook</a></li>
-            <li><a class="team__member-icon tw" href="#">Follow me on twitter</a></li>
-            <li><a class="team__member-icon gplus" href="#">My Google+</a></li>
-            <li><a class="team__member-icon db" href="#">I am on Dribble</a></li>
-          </ul>
-        </div>
-      </div>
-    </section>
+
     <!-- $Contact section-->
     <section class="contact" id="contact">
       <div class="contact__inner">
         <h2 class="contact__title">Contact us</h2>
-        <p class="contact__descr">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
+        <p class="contact__descr">The project is supported by Spirals Team @ INRIA research center in France, don't hesitate to get in touch!</p>
         <form class="contact__form" action="#" method="post">
           <input class="contact__form-input" id="name" type="text" name="name" placeholder="Your name">
           <input class="contact__form-input" id="email" type="email" name="email" placeholder="Your email">
@@ -111,19 +73,19 @@
         <div class="contact__card vcard">
           <h3 class="contact__card-title">Information</h3>
           <div class="contact__card-item place">
-            <div class="fn org">Bak-One Company</div>
+            <div class="fn org">Inria Lille - Nord Europe <br /> Spirals Team</div>
             <div class="adr">
-              <div class="street-address">12345 Hollywood Bvld Street</div><span class="locality">Los Angeles</span>,<span class="region">California</span>
+              <div class="street-address">Parc scientifique de la Haute Borne
+                <br />40, avenue Halley - Bât A - Park Plaza</div><span class="locality">59650 Villeneuve d'Ascq</span>
             </div>
           </div>
-          <div class="contact__card-item tel">+444<span class="type">&nbsp;(Phone)&nbsp;</span>123456</div>
-          <div class="contact__card-item fax tel">+123<span class="type">&nbsp;(FAX)&nbsp;</span>0011223</div><a class="contact__card-item email" href="#">info@companyname.com</a>
+          <!--a class="contact__card-item email" href="#">info@companyname.com</a-->
         </div>
       </div>
     </section>
     <!-- $Page footer-->
     <footer class="page-footer">
-      <div class="page-footer__inner"><span class="page-footer__copyright">&copy; Copyright 2013 Bak-One | One Page Flat Template</span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
+      <div class="page-footer__inner"><span class="page-footer__copyright">&copy; Copyright 2017 INRIA</span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
     </footer>
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
