Change the pie to display hostname to now display statuses

--- a/repairnator-site/app/index.html
+++ b/repairnator-site/app/index.html
@@ -133,7 +133,7 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
-    <script src="scripts/hostname_pie.js"></script>
+    <script src="scripts/statuses_pie.js"></script>
     <script src="scripts/scanner_timechart.js"></script>
     <script src="scripts/realtime_values.js"></script>
     <!-- endbuild -->
