--- a/repairnator-site/app/index.html
+++ b/repairnator-site/app/index.html
@@ -114,6 +114,7 @@
     <script src="/bower_components/modernizr/modernizr.js"></script>
     <script src="/bower_components/d3/d3.js"></script>
     <script src="/bower_components/highcharts/highcharts.js"></script>
+    <script src="/bower_components/moment/moment.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
