Improve timechart display

--- a/repairnator-site/app/index.html
+++ b/repairnator-site/app/index.html
@@ -139,4 +139,7 @@
     <script src="scripts/realtime_values.js"></script>
     <!-- endbuild -->
   </body>
+  <script src="http://code.highcharts.com/modules/exporting.js"></script>
+  <!-- optional -->
+  <script src="http://code.highcharts.com/modules/offline-exporting.js"></script>
 </html>
