Add new resource to compute SEIP graph. Update data.

--- a/repairnator-site/app/index.html
+++ b/repairnator-site/app/index.html
@@ -137,6 +137,7 @@
     <script src="scripts/statuses_pie.js"></script>
     <script src="scripts/scanner_timechart.js"></script>
     <script src="scripts/realtime_values.js"></script>
+    <!-- script src="scripts/scanner-seip.js"></script -->
     <!-- endbuild -->
   </body>
   <script src="http://code.highcharts.com/modules/exporting.js"></script>
