Use https everywhere

--- a/repairnator-site/website/all-data.html
+++ b/repairnator-site/website/all-data.html
@@ -4,14 +4,14 @@
     <meta charset="utf-8">
     <title>All builds piechart</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    
+
     <script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
-    <script type="text/javascript" src="http://code.highcharts.com/modules/exporting.js"></script>
-    <script type="text/javascript" src="http://code.highcharts.com/modules/offline-exporting.js"></script>
+    <script type="text/javascript" src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script type="text/javascript" src="https://code.highcharts.com/modules/offline-exporting.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript">
-    $.get('http://repairnator.lille.inria.fr/repairnator-mongo-api/inspectors/', function (datas) {
+    $.get('https://repairnator.lille.inria.fr/repairnator-mongo-api/inspectors/', function (datas) {
       var htmlElement = $('#tablerealtime');
 
       var fieldNames = [
