--- a/repairnator-site/website/all-builds-bar.html
+++ b/repairnator-site/website/all-builds-bar.html
@@ -5,10 +5,10 @@
     <title>All builds piechart</title>
 
     <script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
-    <script type="text/javascript" src="http://code.highcharts.com/modules/exporting.js"></script>
-    <script type="text/javascript" src="http://code.highcharts.com/modules/offline-exporting.js"></script>
+    <script type="text/javascript" src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script type="text/javascript" src="https://code.highcharts.com/modules/offline-exporting.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript">
     var simplifyStatuses = function (dataArray) {
       var success = 'Successful Bug Reproduction';
@@ -31,6 +31,10 @@
         'BUILDNOTCHECKEDOUT': errorCheckout
       };
 
+      var total = 0;
+      dataArray.forEach(element => {total += element.counted});
+      console.log("total: "+total);
+
       var dataNewName = dataArray.reduce(function (acc, elem) {
         var status = statusMap[elem._id];
         if (acc[status] === undefined) {
@@ -44,14 +48,17 @@
       var finalArray = Object.keys(dataNewName).reduce(function (acc, id) {
         acc.push({
           'name': id,
-          'y': dataNewName[id]
+          'y': dataNewName[id],
+          'percentage': (dataNewName[id] / total)*100
         });
         return acc;
       }, []);
 
-      return finalArray;
+      return finalArray.sort(function (a, b) {
+        return b.y - a.y;
+      });
     };
-    $.get('http://repairnator.lille.inria.fr/repairnator-mongo-api/inspectors/statusStats', function (data) {
+    $.get('https://repairnator.lille.inria.fr/repairnator-mongo-api/inspectors/statusStats', function (data) {
       var htmlElement = $('#charts');
 
       var total = 0;
@@ -72,7 +79,7 @@
           type: 'category'
         },
         tooltip: {
-          pointFormat: '{series.name}: <b>{point.percentage:.1f}% ({point.y})</b>'
+          pointFormat: '{series.name}: <b> ({point.y})</b>'
         },
         plotOptions: {
           bar: {
@@ -80,7 +87,7 @@
             cursor: 'pointer',
             dataLabels: {
               enabled: true,
-              format: '<b>{point.name}</b>: {point.y}',
+              format: '{point.y} ({point.percentage:.1f}%)',
               style: {
                 color: (Highcharts.theme && Highcharts.theme.contrastTextColor) || 'black'
               }
