--- a/repairnator-site/website/scanner-seip.html
+++ b/repairnator-site/website/scanner-seip.html
@@ -5,12 +5,12 @@
     <title>All builds piechart</title>
 
     <script type="text/javascript" src="https://code.highcharts.com/highcharts.js"></script>
-    <script type="text/javascript" src="http://code.highcharts.com/modules/exporting.js"></script>
-    <script type="text/javascript" src="http://code.highcharts.com/modules/offline-exporting.js"></script>
+    <script type="text/javascript" src="https://code.highcharts.com/modules/exporting.js"></script>
+    <script type="text/javascript" src="https://code.highcharts.com/modules/offline-exporting.js"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.20.1/moment.min.js"></script>
-    <script type="text/javascript" src="http://code.jquery.com/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <script type="text/javascript">
-    $.get('http://repairnator.lille.inria.fr/repairnator-mongo-api/scanners/', function (data) {
+    $.get('https://repairnator.lille.inria.fr/repairnator-mongo-api/scanners/', function (data) {
       var htmlElement = $('#charts');
 
       var endOfDecember = moment('01/01/2018','DD/MM/YYYY');
