Change the website according to #573

--- a/website/repairnator-site/website/all-builds-bar.html
+++ b/website/repairnator-site/website/all-builds-bar.html
@@ -28,7 +28,8 @@
         'NOTFAILING': withoutFailure,
         'NOTTESTABLE': errorTesting,
         'TESTABLE': errorTesting,
-        'BUILDNOTCHECKEDOUT': errorCheckout
+        'BUILDNOTCHECKEDOUT': errorCheckout,
+        'TESTDIRNOTCOMPUTED': errorTesting
       };
 
       var total = 0;
