--- a/website/repairnator-site/app/index.html
+++ b/website/repairnator-site/app/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LibRepair Project</title>
+    <title>What is Repairnator doing right now?</title>
 
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <link href="https://fonts.googleapis.com/css?family=Lato:400,300,700" rel="stylesheet" type="text/css">
@@ -31,29 +31,12 @@
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <header class="page-header js-header">
-      <div class="page-header__inner">
-        <div class="page-header__logo">
-          <h1>RepairNator</h1>&nbsp;<span>Towards repair automation</span>
-        </div>
-        <nav class="page-header__nav js-nav">
-          <ul>
-            <li><a class="page-header__nav-link js-anchor js-link is-active" href="#home">Home</a></li>
-            <li><a class="page-header__nav-link js-anchor js-link" href="#portfolio">Live stats</a></li>
-            <li><a class="page-header__nav-link js-anchor js-link" href="#team">About</a></li>
-            <li><a class="page-header__nav-link js-anchor js-link" href="#realtimedata">Realtime</a></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
-
-    <section class="promo js-jumbo" id="home">
-      <h2 class="promo__title">RepairNator: <span>Scan and Repair</span> automatically</h2>
+    <section class="promo js-jumbo">
+      <h2 class="promo__title">What is Repairnator doing right now?</h2>
       <p class="promo__descr">
-        RepairNator is a tool creating with the purpose to reproduce detected bugs, and to find automatically patches for those bugs.
+        Repairnator is an automated program repair bot for Travis CI <br />
+        Learn more <a style="color: #0b97c4" href="https://github.com/Spirals-Team/repairnator" target="_blank">on Github</a>
       </p>
-      <a class="promo__btn" href="#">Learn more</a>
-      <a class="promo__go-next js-anchor" href="#portfolio">Scroll down</a>
     </section>
     <!-- $Portfolio section-->
     <section id="portfolio">
@@ -67,21 +50,16 @@
         </table>
       </div>
     </section>
-    
+
     <!-- $Page footer-->
     <footer class="page-footer">
-      <div class="page-footer__inner"><span class="page-footer__copyright">&copy; Copyright 2017 INRIA</span><a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
+      <div class="page-footer__inner">
+        <span class="page-footer__copyright">
+          Feedback? Comments? Ideas?
+          <a style="color: white" href="mailto:simon.urli[at]inria.fr,martin.monperrus[at]csc.kth.se?subject=Repairnator">Drop us an email</a>
+        </span>
+        <a class="page-footer__gotop js-anchor" href="#home">Go to top</a></div>
     </footer>
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
-    <script>
-      (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
-      function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
-      e=o.createElement(i);r=o.getElementsByTagName(i)[0];
-      e.src='https://www.google-analytics.com/analytics.js';
-      r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
-      ga('create','UA-XXXXX-X');ga('send','pageview');
-    </script>
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
@@ -109,7 +87,7 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
-    <script src="scripts/statuses_pie.js"></script>
+    <script src="scripts/all-builds-bar.js"></script>
     <script src="scripts/scanner_timechart.js"></script>
     <script src="scripts/realtime_values.js"></script>
     <!--script src="scripts/scanner-seip.js"></script-->
