--- a/website/repairnator-site/app/index.html
+++ b/website/repairnator-site/app/index.html
@@ -124,6 +124,7 @@
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
+    <script src="scripts/constants.js"></script>
     <script src="scripts/api.js"></script>
     <script src="scripts/notification.js"></script>
     <script src="scripts/all-builds-bar.js"></script>
