--- a/website/repairnator-site/app/index.html
+++ b/website/repairnator-site/app/index.html
@@ -43,6 +43,10 @@
       <div id="charts"></div>
     </section>
 
+    <div id="charts-vue">
+      <speedrate-chart/>
+    </div>
+
     <div id="app-inspectors">
       <table class="table-responsive">
           <inspector-line
@@ -128,6 +132,7 @@
     <!-- build:js scripts/components.js -->
     <script src="components/pagination.js"></script>
     <script src="components/grid.js"></script>
+    <script src="components/charts/speedrateChart.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
@@ -137,6 +142,7 @@
     <script src="scripts/all-builds-bar.js"></script>
     <script src="scripts/scanner_timechart.js"></script>
     <script src="scripts/realtime_values.js"></script>
+    <script src="scripts/charts.js"></script>
     <!--script src="scripts/scanner-seip.js"></script-->
     <!-- endbuild -->
   </body>
