Bootstrap md to sm

--- a/website/repairnator-site/app/index.html
+++ b/website/repairnator-site/app/index.html
@@ -46,10 +46,10 @@
     <div id="charts-vue">
       <div class="">
         <div class="row">
-          <div class="col-md-8">
+          <div class="col-sm-8">
             <speedrate-chart/>
           </div>
-          <div class="col-md-4">
+          <div class="col-sm-4">
             <speedrate-pie-chart/>
           </div>
         </div>
