--- a/website/repairnator-site/app/index.html
+++ b/website/repairnator-site/app/index.html
@@ -43,6 +43,19 @@
       <div id="charts"></div>
     </section>
 
+    <div id="charts-vue">
+      <div class="">
+        <div class="row">
+          <div class="col-sm-8">
+            <speedrate-chart/>
+          </div>
+          <div class="col-sm-4">
+            <speedrate-pie-chart/>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div id="app-inspectors">
       <table class="table-responsive">
           <inspector-line
@@ -123,11 +136,14 @@
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/scrollspy.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/collapse.js"></script>
     <script src="/bower_components/bootstrap-sass/assets/javascripts/bootstrap/tab.js"></script>
+
     <!-- endbuild -->
 
     <!-- build:js scripts/components.js -->
     <script src="components/pagination.js"></script>
     <script src="components/grid.js"></script>
+    <script src="components/charts/speedrateChart.js"></script>
+    <script src="components/charts/speedratePieChart.js"></script>
     <!-- endbuild -->
 
     <!-- build:js scripts/main.js -->
