--- a/website/repairnator-site/app/index.html
+++ b/website/repairnator-site/app/index.html
@@ -102,6 +102,32 @@
       </div>
     </div>
 
+    <div class="modal fade" id="patchesModal" tabindex="-1" role="dialog" aria-labelledby="patchesModalLabel" aria-hidden="true">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="inspectorModalLabel">Build details</h5>
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+          <div class="modal-body">
+            <div id="patches-details">
+              <h1> Patches for {{ buildId }}</h1>
+              <div> Repairnator found {{ numberFound }} patches.</div>
+              <p v-for="patch in patches">
+                  <strong>Filepath : </strong> <br/> <span class="pre-json"> {{ patch['filepath'] }} </span> <br>
+                  <strong>Diff : </strong> <br/> <span class="pre-json"> {{ patch['diff'] }} </span>
+              </p>
+            </div>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- $Page footer-->
     <footer class="page-footer">
       <div class="page-footer__inner">
