replace most "Spirals-Team/repairnator" with "eclipse/repairnator"

--- a/website/repairnator-site/app/index.html
+++ b/website/repairnator-site/app/index.html
@@ -35,7 +35,7 @@
       <h2 class="promo__title">What is Repairnator doing right now?</h2>
       <p class="promo__descr">
         Repairnator is an automated program repair bot for Travis CI <br />
-        Learn more <a style="color: #0b97c4" href="https://github.com/Spirals-Team/repairnator" target="_blank">on Github</a>
+        Learn more <a style="color: #0b97c4" href="https://github.com/eclipse/repairnator" target="_blank">on Github</a>
       </p>
     </section>
     <!-- $Portfolio section-->
