--- a/src/repairnator-jenkins-plugin/src/main/resources/io/jenkins/plugins/main/RepairnatorPostBuild/help-gitUrl.html
+++ b/src/repairnator-jenkins-plugin/src/main/resources/io/jenkins/plugins/main/RepairnatorPostBuild/help-gitUrl.html
@@ -1,5 +1,5 @@
 <div>
  <p>
-  Example: https://github.com/surli/failingProject.git
+  Example: https://github.com/surli/failingProject
  </p>
 </div>
