--- a/src/repairnator-jenkins-plugin/src/main/resources/io/jenkins/plugins/main/RepairnatorPostBuild/help-sonarRulesBlock.html
+++ b/src/repairnator-jenkins-plugin/src/main/resources/io/jenkins/plugins/main/RepairnatorPostBuild/help-sonarRulesBlock.html
@@ -1,9 +1,9 @@
 <div>
 	<p>
-		This should be specified if SonarQubeRepair has been chosen in RepairTools section. Default: 2116 .
+		This should be specified if Sorald has been chosen in RepairTools section. Default: 2116 .
 	</p> 
 	<p>
-		Supported rules and all rule details, check https://github.com/SpoonLabs/sonarqube-repair.
+		Supported rules and all rule details, check https://github.com/SpoonLabs/sorald.
 		Emailing patches currently only work for single rule repairs.
 	</p>
 </div>
